feat:Admin analytics added
added admin middleware
